manifests/networkPolicies/yaobank/NP-yaobank-ns.yaml
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: yaobank-ns
  namespace: yaobank
spec:
  selector: all()  # default
  types:
    - Ingress
    - Egress
  ingress:
    - action: Log
    - action: Allow
      source:
        namespaceSelector: projectcalico.org/name == "yaobank"
      destination:
        namespaceSelector: projectcalico.org/name == "yaobank"
    - action: Allow
      source:
        namespaceSelector: projectcalico.org/name == "istio-system"
        selector: app == "istiod"
  egress:
    - action: Log
    - action: Allow
      source:
        namespaceSelector: projectcalico.org/name == "yaobank"
      destination:
        namespaceSelector: projectcalico.org/name == "yaobank"
    - action: Allow
      destination:
        namespaceSelector: projectcalico.org/name == "istio-system"
        selector: app == "istiod"
